# video2rtsp

./: .gitignore  LICENSE  README.md  pyproject.toml
src/video2rtsp/: cli.py  server.py
