[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "video2rtsp"
version = "0.1.0"
description = "Expose a YouTube video as a local RTSP endpoint."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "Simone Romagnoli" }
]
dependencies = []
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Multimedia :: Video",
  "Topic :: Internet",
]

[project.urls]
Homepage = "https://github.com/simonerom/video2rtsp"
Repository = "https://github.com/simonerom/video2rtsp"
Issues = "https://github.com/simonerom/video2rtsp/issues"

[project.scripts]
video2rtsp = "video2rtsp.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
